# Best_Books

./: 135.ipynb  ONE_TO_MANY_RELATIONSHIP_OF_TABLES.sql  README.md  main.py  pyproject.toml  requirements.txt
data_cleaning/: best_books_cleaning.ipynb
db_config/: __init__.py  config.py
db_functions/: __init__.py  db_functions.py
for_tables/: table_info.txt  to_populate_tables.txt
misc/: BEST_BOOKS_ERD.pgerd  COMPOSITE_PK.sql  ONE_TO_MANY_RELATIONSHIP_OF_TABLES.sql
