[tool.poetry]
name = "best-books"
version = "0.1.0"
description = "Packages for Best Books project"
authors = ["repeckadonatas <repeckadonatas@yahoo.comm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
psycopg2 = "^2.9.9"
pandas = "^2.1.3"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
